# gnu_linux_development

02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: 1.gdb  2.gdb  Makefile  expected-1.txt  expected-2.txt  range.c
08_I18n/: README.md  guess.c  guess.pot  ru.mo  ru.po
08_I18n_new/: Makefile.am  configure.ac
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  labyrinth.c
10_LibTesting/: Makefile.am  README.md  configure.ac  make.sh
10_LibTesting/src/: Makefile.am  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  test.h  test1.c  test2.c  test3.c  test4.c  test5.c  tests.c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess.c  guess.pot  ru.po
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/po/: POTFILES.IN  ru.po
12_InstallPackaging/src/: Makefile.am  adder.c  adder.h
12_InstallPackaging/test/: Makefile.am  test.ts
